# EasyRAG

./: .env.example  .gitignore  30-DAY-FINAL-STATUS.md  CHANGELOG.md  DEPLOYMENT.md  DEPLOYMENT_READINESS_SUMMARY.md  GA_LAUNCH_FINAL_STATUS.md  INCIDENT_CHEATSHEET.md  INSTALL.md  LAUNCH_READINESS_REPORT.md  LIMITED_BETA_FINAL_REPORT.md  LIVE_VALIDATION_REPORT.md  OPERATIONS.md  README.md  RELEASE_NOTES_v0.4.1.md  ROLLOUT_CHECKLIST.md  STAGING_DEPLOYMENT.md  doctor.sh  install.sh  spec.md  start.sh  stop.sh  uninstall.sh
app/backend/: Dockerfile  alembic.ini  main.py  pyproject.toml  requirements.txt
app/backend/alembic/: env.py
app/backend/alembic/versions/: 001_initial_schema.py
app/backend/api/: __init__.py  collections.py  document_management.py  documents.py  ingestion.py  router.py  search.py
app/backend/models/: __init__.py  answer_record.py  chunk.py  collection.py  db.py  derived_asset.py  document_version.py  failure_event.py  ingestion_job.py  query_session.py  schemas.py  source_document.py
app/backend/prompts/: __init__.py  grounded_answer.py
app/backend/services/: auth.py  autoscaler.py  chunker.py  config.py  constants.py  database.py  embedder.py  evidence.py  file_validation.py  generator.py  indexer.py  llm_provider.py  metrics.py  parser.py  qdrant_client.py  query_normalizer.py  reranker.py  retriever.py  sparse_vector.py  storage.py
app/backend/tests/: conftest.py
app/backend/tests/integration/: conftest.py  test_api.py
app/backend/tests/unit/: test_autoscaler.py  test_config.py  (+13 more)
app/backend/workers/: __init__.py  ingestion_worker.py
(+118 files in other folders)
